# HelloOpenGL

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
CMake/: assimp.cmake  bullet.cmake  freetype.cmake  glad.cmake  glfw.cmake  glm.cmake  openal.cmake  stb.cmake
include/: main.hpp
src/: main.cpp
